refactor: 요청 구조 리팩토링